@@ -148,7 +148,8 @@
                                 <jvmArgs>
                                     <jvmArg>-Xms1024m</jvmArg>
                                     <jvmArg>-Xmx1024m</jvmArg>
-                                    <jvmArg>-XX:MaxPermSize=512m</jvmArg>
+                                    <jvmArg>-XX:MaxPermSize=2048m</jvmArg>
+                                    <jvmArg>-XX:PermSize=512m</jvmArg>
                                 </jvmArgs>
                                 <compilerPlugins>
                                     <compilerPlugin>
